--- a/templates/create.html
+++ b/templates/create.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form method="post">
+        <p>
+            <label for="title">Title</label>
+            <input type="text" name="title" placeholder="title"></input>
+        </p>
+        <p>
+            <label for="description">Description</label>
+            <input type="text" name="description" placeholder="description"></input>
+        </p>
+        <p>
+            <button type="submit">Create</button>
+        </p>
+    </form>
+
 </body>
 </html>
